@@ -9,6 +9,7 @@ Changelog
 
 Changes:
     * [Bugfix] The query debugger creates gibberish when there are more than 10 parameters in the query.
+    * [Bugfix] Do not run out of memory when escaping very large strings.
 
 -----
 
